cmake_minimum_required(VERSION 3.26)
project(advent)

set(CMAKE_CXX_STANDARD 17)

add_executable(day1part1 day1/part1.cpp)
add_executable(day1part2 day1/part2.cpp)

add_executable(day2part1 day2/part1.cpp)
add_executable(day2part2 day2/part2.cpp)

add_executable(day3part1 day3/part1.cpp)
add_executable(day3part2 day3/part2.cpp)

add_executable(day4part1 day4/part1.cpp)
add_executable(day4part2 day4/part2.cpp)
